# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
Brain_games/: cli.py  game_start.py  game_starter.py  start_game.py
Brain_games/games/: calc_game.py  even_game.py  gcd_game.py  prime_game.py  progression_game.py
Brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/: cli.py
brain_games/games/: calc_game.py  even_game.py  gcd_game.py  prime_game.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_games_1.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py  game_starter_integers.py  game_starter_strings.py  get_answer.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
