[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A number of games run from the terminal"
classifiers = [
"Natural Language :: English",
"Topic :: Games/Entertainment :: Puzzle Games"]
authors = ["zwg <zwg.work.mail@gmail.com>"]
repository = "https://github.com/zwg3/python-project-49"
readme = "README.md"
packages = [{include = "Brain_games"},]

[tool.poetry.scripts]
brain-games = "Brain_games.scripts.brain_games:main"
brain-even = "Brain_games.scripts.brain_even:main"
brain-calc = "Brain_games.scripts.brain_calc:main"
brain-gcd = "Brain_games.scripts.brain_gcd:main"
brain-progression = "Brain_games.scripts.brain_progression:main"
brain-prime = "Brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
